# Operating-Systems

./: Run  Run_All_Projects
Bloom-Filter/: Run
Bloom-Filter/Bloom_Filter/: CMakeLists.txt
Bloom-Filter/Bloom_Filter/Include/: Bloom_Filter.h  List.h  Tree.h
Bloom-Filter/Bloom_Filter/src/: Bloom_Filter.cpp  List.cpp  Tree_Functions.cpp  main.cpp
Bloom-Filter/Read Me/: READ ME.docx
Bloom-Filter_Multithreads/: Run
Bloom-Filter_Multithreads/Multi_Thread_Bloom_Filter/: CMakeLists.txt
Bloom-Filter_Multithreads/Multi_Thread_Bloom_Filter/Include/: Bloom_Filter.h  Operations.h  main_functions.h
Bloom-Filter_Multithreads/Multi_Thread_Bloom_Filter/src/: Bloom_Filter.cpp  List.cpp  main.cpp  main_functions.cpp
Bloom-Filter_Multithreads/READ ME/: READ ME.docx
Data-Classificator/: Run
Data-Classificator/Vector_Simulator/: CMakeLists.txt
Data-Classificator/Vector_Simulator/Include/: BasicFunctions.h  ConvertToString.h  MD5.h  MostPopularValue.h  Statistics.h  VectorFunctions.h
Data-Classificator/Vector_Simulator/Tests/: test  test2
Data-Classificator/Vector_Simulator/src/:  BasicFunctions.cpp   ConvertToString.cpp   FileFunctions.cpp  MD5.cpp  VectorFunctions.cpp  main.cpp
File-Management/: Run
File-Management/Managment/: CMakeLists.txt
File-Management/Read Me/: Read Me.docx
Hash-Function/: Read_Me.docx  Run
Hash-Function/HashFunction/: CMakeLists.txt
Machine-Factory/: Run
Machine-Factory/Factory-Simulator/: CMakeLists.txt
Sorting-Algorithms-Evaluation/: Run
Sorting-Algorithms-Evaluation/Sorting_Algorithms/: CMakeLists.txt
(+82 files in other folders)
